--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698286964-senior-product-designer-analytics'>Optimizely Senior Product Designer, Analytics | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle/job/oN0rbfw9'>Trek Bicycle Careers - Trip Design Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698286964-senior-product-designer-analytics'>Optimizely Senior Product Designer, Analytics | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://www.womenwhocode.com/jobs/5461?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Product Manager - Mode | Women Who Code</a></h5> 
@@ -142,7 +146,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -182,7 +186,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://lemanoosh.com/jobs/junior-product-designer-london-uk/'>Junior Product Designer ? leManoosh</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lemanoosh.com/jobs/junior-product-designer-london-uk/'>Junior Product Designer ? leManoosh</a></h5> 
 <p><span class="badge badge-light">London Tokyo</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -235,6 +239,12 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qLHaVfwh&k=Job&j=oClgbfw8&__jvst=Employee&__jvsd=syFcciwo&__jvsc=Twitter&bid=n7SJoMwn'>Egnyte Careers - Senior Product Manager - Data Governance (Protect)</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://vifor.avature.net/externalcareers/JobDetail/Hematology-Product-Manager-GCC-Dubai/2159'>Hematology Product Manager GCC - Dubai - externalcareers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>1 day ago ... The product manager is responsible for the implementation and execution of a 
+successful marketing strategy to increase market share of Vifor Pharma products
+?...</p>
 <hr/>
 <h5><a href='http://frequence.applytojob.com/apply/vuhW5zROED/Product-Manager'>Product Manager - Frequence - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -354,7 +364,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -444,14 +454,6 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/natixis/job/oGgpbfwg'>Natixis Investment Managers Careers - Associate Legal Product Manager</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1933485'>Job Application for Product Designer, UX at ServiceTitan</a></h5> 
-<p><span class="badge badge-light">Glendale, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4498655002'>Job Application for Product Designer Co-op at Copperleaf</a></h5> 
-<p><span class="badge badge-light">Vancouver, BC  Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
