--- a/full-stack.html
+++ b/full-stack.html
@@ -39,11 +39,11 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.smartrecruiters.com/Cineplex/743999698416569-senior-full-stack-software-developer'>Cineplex Senior Full Stack Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nv8ipMwB'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://pickar.join.com/jobs/465932-intern-as-full-stack-developer'>Job @ pickar (Remote): Intern as Full-Stack Developer | JOIN</a></h5> 
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/alation/6b72c778-4ec5-4cd6-a216-aff7d010cc4a'>Alation, Inc. - Full Stack Engineer: Customer Growth</a></h5> 
+<h5><a href='https://jobs.lever.co/alation/6b72c778-4ec5-4cd6-a216-aff7d010cc4a'>Alation, Inc. - Full Stack Engineer: Customer Growth</a></h5> 
 <p><span class="badge badge-light">Chennai, India  Berkeley</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -78,11 +78,11 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sT2QIgwe&__jvsc=Twitter&bid=nHodpMwY'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sT2QIgwe&__jvsc=Twitter&bid=nHodpMwY'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/notarize/c69af410-ed47-4185-800b-d5035cc7a5c6'>Notarize - Full-Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/notarize/c69af410-ed47-4185-800b-d5035cc7a5c6'>Notarize - Full-Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oSaOafwK&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nfvbpMwB'>Cirrus Logic Careers - Full Stack Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oSaOafwK&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nfvbpMwB'>Cirrus Logic Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -140,7 +140,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sFFZ9gwd&__jvsc=Twitter&bid=nT3XoMwy'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sFFZ9gwd&__jvsc=Twitter&bid=nT3XoMwy'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -180,7 +180,7 @@
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/gh878yb33dwjmja8qcrnfg4z3r'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/gh878yb33dwjmja8qcrnfg4z3r'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -188,7 +188,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/octane/c26d9979-6427-4637-a3fb-a422596690d2'>Octane AI - Full-Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/octane/c26d9979-6427-4637-a3fb-a422596690d2'>Octane AI - Full-Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -222,7 +222,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://otus.recruiterbox.com/jobs/fk03o36/'>
+<h5><a href='https://otus.recruiterbox.com/jobs/fk03o36/'>
     Full Stack Web Engineer - Client Solutions at Otus
 </a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois Chicago</span></p>
@@ -268,7 +268,7 @@
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/ec5e4f16-5238-45b1-b1b9-8c11545ce1a7'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B] (PL)</a></h5> 
+<h5><a href='https://jobs.lever.co/beetalents/ec5e4f16-5238-45b1-b1b9-8c11545ce1a7'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B] (PL)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -314,7 +314,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/full-stack-developer-dYdc92LdSr6y4DaICoXfFy'>Full Stack Developer #0465 job at Stratus Solutions in Laurel, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/full-stack-developer-dYdc92LdSr6y4DaICoXfFy'>Full Stack Developer #0465 job at Stratus Solutions in Laurel, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -390,7 +390,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.dice.com/jobs/detail/Full-Stack-Developer-TOP-Consulting-Columbus-Ohio-/10486611/6272533'>Full Stack Developer - TOP Consulting - Columbus, Ohio | Dice.com</a></h5> 
+<h5><a href='https://www.dice.com/jobs/detail/Full-Stack-Developer-TOP-Consulting-Columbus-Ohio-/10486611/6272533'>Full Stack Developer - TOP Consulting - Columbus, Ohio | Dice.com</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -425,7 +425,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Vichara/743999698373923-full-stack-net-developer-ai-lead'>Vichara Full Stack .NET Developer / AI Lead | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Vichara/743999698373923-full-stack-net-developer-ai-lead'>Vichara Full Stack .NET Developer / AI Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Gurugram, Haryana</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
